--- a/vs/ugrep/ugrep/ugrep.vcxproj.filters
+++ b/vs/ugrep/ugrep/ugrep.vcxproj.filters
@@ -129,6 +129,15 @@
     <ClCompile Include="src\cnf.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="lib\simd_avx512bw.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\simd_avx2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lib\matcher_avx2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\glob.hpp">
@@ -240,6 +249,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\flag.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\reflex\simd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
