--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -877,12 +877,12 @@ uninstall-am:
 
 
 # separately compile matcher_avx2.cpp and matcher_avx512bw (with the same content as matcher.cpp) with AVX optimizations enabled
-libreflex_a-matcher_avx2.$(OBJEXT)     : CXXFLAGS += -DCOMPILE_AVX2 $(SIMD_AVX2_FLAGS)
-libreflex_a-matcher_avx512bw.$(OBJEXT) : CXXFLAGS += -DCOMPILE_AVX512BW $(SIMD_AVX512BW_FLAGS)
+libreflex_a-matcher_avx2.$(OBJEXT)     : CXXFLAGS += $(SIMD_AVX2_FLAGS)
+libreflex_a-matcher_avx512bw.$(OBJEXT) : CXXFLAGS += $(SIMD_AVX512BW_FLAGS)
 
 # separately compile simd_avx2.cpp and simd_avx512bw.cpp with AVX optimizations enabled
-libreflex_a-simd_avx2.$(OBJEXT)     : CXXFLAGS += -DCOMPILE_AVX2 $(SIMD_AVX2_FLAGS)
-libreflex_a-simd_avx512bw.$(OBJEXT) : CXXFLAGS += -DCOMPILE_AVX512BW $(SIMD_AVX512BW_FLAGS)
+libreflex_a-simd_avx2.$(OBJEXT)     : CXXFLAGS += $(SIMD_AVX2_FLAGS)
+libreflex_a-simd_avx512bw.$(OBJEXT) : CXXFLAGS += $(SIMD_AVX512BW_FLAGS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
