--- a/Makefile.in
+++ b/Makefile.in
@@ -933,17 +933,17 @@ install-data-hook:
 		 echo "|   alias ux     = 'ug -U --hexdump'                   |"; \
 		 echo "|   alias uz     = 'ug -z'                             |"; \
 		 echo "|   alias ugit   = 'ug --ignore-files'                 |"; \
-		 echo "|   alias grep   = 'ugrep -G'                          |"; \
-		 echo "|   alias egrep  = 'ugrep -E'                          |"; \
-		 echo "|   alias fgrep  = 'ugrep -F'                          |"; \
-		 echo "|   alias pgrep  = 'ugrep -P'                          |"; \
-		 echo "|   alias xgrep  = 'ugrep -U --hexdump'                |"; \
-		 echo "|   alias zgrep  = 'ugrep -zG'                         |"; \
-		 echo "|   alias zegrep = 'ugrep -zE'                         |"; \
-		 echo "|   alias zfgrep = 'ugrep -zF'                         |"; \
-		 echo "|   alias zpgrep = 'ugrep -zP'                         |"; \
-		 echo "|   alias zxgrep = 'ugrep -zU --hexdump'               |"; \
-		 echo "|   alias xdump  = 'ugrep -X \"\"'                       |"; \
+		 echo "|   alias grep   = 'ug -G'                             |"; \
+		 echo "|   alias egrep  = 'ug -E'                             |"; \
+		 echo "|   alias fgrep  = 'ug -F'                             |"; \
+		 echo "|   alias pgrep  = 'ug -P'                             |"; \
+		 echo "|   alias xgrep  = 'ug -U --hexdump'                   |"; \
+		 echo "|   alias zgrep  = 'ug -zG'                            |"; \
+		 echo "|   alias zegrep = 'ug -zE'                            |"; \
+		 echo "|   alias zfgrep = 'ug -zF'                            |"; \
+		 echo "|   alias zpgrep = 'ug -zP'                            |"; \
+		 echo "|   alias zxgrep = 'ug -zU --hexdump'                  |"; \
+		 echo "|   alias xdump  = 'ug -X \"\"'                          |"; \
 		 echo "|                                                      |"; \
 		 echo "| Thank you for using ugrep!                           |"; \
 		 echo "|                                                      |"; \
