--- a/Makefile.am
+++ b/Makefile.am
@@ -47,20 +47,19 @@ install-data-hook:
 		 echo "|                                                      |"; \
 		 echo "| Aliases to consider:                                 |"; \
 		 echo "|   alias uq     = 'ug -Q'                             |"; \
-		 echo "|   alias ux     = 'ug -U --hexdump'                   |"; \
 		 echo "|   alias uz     = 'ug -z'                             |"; \
 		 echo "|   alias ugit   = 'ug --ignore-files'                 |"; \
 		 echo "|   alias grep   = 'ug -G'                             |"; \
 		 echo "|   alias egrep  = 'ug -E'                             |"; \
 		 echo "|   alias fgrep  = 'ug -F'                             |"; \
 		 echo "|   alias pgrep  = 'ug -P'                             |"; \
-		 echo "|   alias xgrep  = 'ug -U --hexdump'                   |"; \
 		 echo "|   alias zgrep  = 'ug -zG'                            |"; \
 		 echo "|   alias zegrep = 'ug -zE'                            |"; \
 		 echo "|   alias zfgrep = 'ug -zF'                            |"; \
 		 echo "|   alias zpgrep = 'ug -zP'                            |"; \
-		 echo "|   alias zxgrep = 'ug -zU --hexdump'                  |"; \
-		 echo "|   alias xdump  = 'ug -X \"\"'                          |"; \
+		 echo "|   alias ux     = 'ugrep -U --hexdump'                |"; \
+		 echo "|   alias zxgrep = 'ugrep -zU --hexdump'               |"; \
+		 echo "|   alias xdump  = 'ugrep -X \"\"'                       |"; \
 		 echo "|                                                      |"; \
 		 echo "| Thank you for using ugrep!                           |"; \
 		 echo "|                                                      |"; \
