--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -51,4 +51,8 @@ jobs:
             -**/conftest.cpp
           input: sarif-results/${{ matrix.language }}.sarif
           output: sarif-results/${{ matrix.language }}.sarif
-          
+
+      - name: Upload SARIF
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: sarif-results/${{ matrix.language }}.sarif
