--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -30,14 +30,7 @@ jobs:
         uses: github/codeql-action/init@v2
         with:
           languages: ${{ matrix.language }}
-          queries: +security-and-quality
-          query-filters:
-            - exclude:
-                id: cpp/path-injection
-                id: cpp/uncontrolled-process-operation
-                problem.severity:
-                  - warning
-                  - recommendation
+          config-file: config.yml
 
       - name: Autobuild
         uses: github/codeql-action/autobuild@v2
