--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -6,7 +6,9 @@ queries:
 query-filters:
   - exclude:
       id: cpp/path-injection
+  - exclude:
       id: cpp/uncontrolled-process-operation
+  - exclude:
       problem.severity:
         - warning
         - recommendation
