--- a/.github/config.yml
+++ b/.github/config.yml
@@ -5,10 +5,12 @@ queries:
 
 query-filters:
   - exclude:
-      id: cpp/path-injection
+      id: cpp/path-injection # disable - ugrep accepts file command line args
   - exclude:
-      id: cpp/uncontrolled-process-operation
+      id: cpp/uncontrolled-process-operation # disable - ugrep may fork process given as command line args
+  - exclude:
+      id: cpp/user-controlled-bypass # disable - false positives in filename extension check
   - exclude:
       problem.severity:
-        - warning
-        - recommendation
+        - warning # disable code style warnings for C++ noobs
+        - recommendation # disable code style notes for C++ noobs
