--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -45,7 +45,7 @@ jobs:
       - name: filter-sarif
         uses: zbazztian/filter-sarif@master
         with:
-          # filter out all test files, debugging, and automake checking files
+          # filter out all test files, debugging, and autoconf checking files
           patterns: |
             -**/tests
             -**/lib/debug.cpp
