--- a/Makefile.in
+++ b/Makefile.in
@@ -891,9 +891,9 @@ uninstall-man: uninstall-man1
 .PRECIOUS: Makefile
 
 
-all-local:	cp2bin add-filters
+all-local:	cp2bin
 
-.PHONY:		cp2bin add-filters
+.PHONY:		cp2bin
 
 # to copy the ugrep binary to the local ugrep/bin/ugrep and ugrep/bin/ug
 cp2bin:		$(top_builddir)/src/ugrep$(EXEEXT)
@@ -903,12 +903,10 @@ cp2bin:		$(top_builddir)/src/ugrep$(EXEEXT)
 		  cd $(top_builddir)/bin; \
 		  rm -f ug$(EXEEXT); \
 		  cp -f ugrep$(EXEEXT) ug$(EXEEXT)
+		@./add-filters.sh
 		@echo
 		@echo "OK"
 		@echo
-
-add-filters:	${UGREP}
-		@./add-filters.sh
 
 install-exec-hook:
 		cp -f $(top_builddir)/bin/ugrep+ $(top_builddir)/bin/ug+ $(DESTDIR)$(bindir)
