Redirect `ug+` / `ugrep+` scripts
`bin/` directory is where artifacts are produced.
On `make clean` that should be cleaned.

This means that, those scripts do not belong there.
And anyway they don't - they are `src/` material; not generated artifacts.

Signed-off-by: Stavros Ntentos <133706+stdedos@users.noreply.github.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,7 +24,7 @@ cp2bin:		$(top_builddir)/src/ugrep$(EXEEXT)
 		@echo
 
 install-exec-hook:
-		cp -f $(top_builddir)/bin/ugrep+ $(top_builddir)/bin/ug+ $(DESTDIR)$(bindir)
+		cp -f $(top_builddir)/src/bin/ugrep+ $(top_builddir)/src/bin/ug+ $(DESTDIR)$(bindir)
 		rm -f $(DESTDIR)$(bindir)/ug$(EXEEXT)
 		cd $(DESTDIR)$(bindir) && cp -f ugrep$(EXEEXT) ug$(EXEEXT)
 
