--- a/config.h.in
+++ b/config.h.in
@@ -22,6 +22,9 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define to 1 if you have `brotli' library (-lbrotlidec -lbrotlienc) */
+#undef HAVE_LIBBROTLI
+
 /* Define to 1 if you have `bz2' library (-lbz2) */
 #undef HAVE_LIBBZ2
 
