add bzip3 decompression #311
tested and working: new m4/ax_check_bzip3lib.m4, updated autotools; updated ugrep.cpp; updated tests

--- a/Makefile.am
+++ b/Makefile.am
@@ -70,7 +70,8 @@ install-data-hook:
 		 echo "|   alias zpgrep = 'ug -zP'                            |"; \
 		 echo "|   alias ux     = 'ugrep -U --hexdump'                |"; \
 		 echo "|   alias zxgrep = 'ugrep -zU --hexdump'               |"; \
-		 echo "|   alias xdump  = 'ugrep -X \"\"'                       |"; \
+		 echo "|   alias xdump  = 'ugrep --hexdump \"\"'                |"; \
+		 echo "|   alias zmore  = 'ugrep+ -z -I -+ --pager \"\"'        |"; \
 		 echo "|                                                      |"; \
 		 echo "| Thank you for using ugrep!                           |"; \
 		 echo "|                                                      |"; \
